fix jump bg

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+  transition: 1s;
 }
 
 .backgroundBlur {
@@ -71,6 +72,7 @@
   height: 100%;
   top: 0;
   left: 0;
+  transition: 1s;
   /* background: #edededc7; */
   /* background: radial-gradient(#ededede3 50%, transparent); */
   background: linear-gradient(125deg, #edededde 65%, transparent);
